Tue Feb 12 00:26:23 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: resolving
	  VariableNode is useless, because it is equal to resolving
	  DefinedVariable.

	* net/loveruby/cflat/compiler/TypeResolver.java: define
	  resolveNodeList, which is an alias of visitNodeList.

Mon Feb 11 06:54:20 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --dump-stmt, to dump only first statement of main.

Mon Feb 11 06:33:10 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: unify newFileParser and
	  newReader.

Mon Feb 11 04:28:52 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java
	  (pushScope): forgot to remove useless line.

Mon Feb 11 04:26:04 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/LocalScope.java: new subclass of Scope.

	* net/loveruby/cflat/ast/Scope.java: move local scope only methods
	  to LocalScope class.

	* net/loveruby/cflat/ast/ToplevelScope.java: local scope only
	  methods are moved to LocalScope, do not need to disable
	  #variables, #allVariables, ...

	* net/loveruby/cflat/ast/Frame.java: is useless, removed.

	* net/loveruby/cflat/ast/DefinedFunction.java: Frame ->
	  LocalScope.

	* net/loveruby/cflat/ast/BlockNode.java: Scope -> LocalScope.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: Frame
	  removed.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: Scope
	  -> LocalScope.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java
	  (pushScope): check duplicated local variables.

Mon Feb 11 03:59:19 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Scope.java: use LinkedHashMap to unify
	  entities and entitiesMap (entities should be ordered).

	* net/loveruby/cflat/ast/Frame.java: ditto.

	* net/loveruby/cflat/ast/ToplevelScope.java: ditto.

	* net/loveruby/cflat/ast/Scope.java: remove unused method